# streamlit-paw

./: LICENSE  README.md  pyproject.toml
streamlit_paw/: 0_🏠_Home.py
streamlit_paw/data/: wpdrama_result.csv
streamlit_paw/models/: linear_regression_grad_admission.pkl
streamlit_paw/pages/: 1_📊_Statistics.py  2_🔢_Calculation.py  3_😶_Sentiment_Analysis.py  4_📈_Admission_Chance.py  4_📈_Linear_Regression.py  5_👻_Bisindo_Gesture.py  5_🔣_About.py  6_🔣_About.py
